Issue #146 - Avoid warnings on Class.newInstance()